--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <script src="libraries/matter.js"></script>
     <script src="libraries/p5.play.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
-    
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyC4BUBzZyI9XgTnaOtXIDLGD7uIUMiElGc",
-        authDomain: "c39-fruitcatcher.firebaseapp.com",
-        databaseURL: "https://c39-fruitcatcher.firebaseio.com",
-        projectId: "c39-fruitcatcher",
-        storageBucket: "c39-fruitcatcher.appspot.com",
-        messagingSenderId: "686122669825",
-        appId: "1:686122669825:web:489d7ecfc2fcb4f9a66d00"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyAaAIniNzHDar1hwp2HwssSvWi0QOHkFgQ",
+    authDomain: "fruit-collector-acc68.firebaseapp.com",
+    databaseURL: "https://fruit-collector-acc68-default-rtdb.firebaseio.com",
+    projectId: "fruit-collector-acc68",
+    storageBucket: "fruit-collector-acc68.appspot.com",
+    messagingSenderId: "627491755995",
+    appId: "1:627491755995:web:c26e9350932af7c41479fe"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <script src="js/player.js"></script>
     <script src="js/form.js"></script>
     <script src="js/game.js"></script>
